[package]
name = "gbemu"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11.1"
log = "0.4.20"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [dependencies]
# sdl2 = "0.35.2"

[dependencies.sdl2]
version = "0.35.2"
features = ["ttf"]
